Pull request #139: WDZO-1546: Fix incorrect imgs display at textAndBanners step in PromoCampaignInfo
Squashed commit of the following:

commit 0840b34c3e7050c830b5340cb655459925e1d31a
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Thu Feb 11 17:56:40 2021 +0300

    WDZO-1546: Add visibility validation on front and visibility validation from back

commit e3fca42f53fc47a8db3d342e5fb71236647f3393
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Thu Feb 11 09:02:55 2021 +0300

    WDZO-1546: Fix incorrect imgs display at textAndBanners step in PromoCampaignInfo

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
@@ -6,7 +6,7 @@
     position: relative;
     height: 180px;
     overflow: hidden;
-    background-color: #d4d9de;
+    background-color: #e9e9e9;
 }
 
 .col {
