--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignVisibilitySettingInput/PromoCampaignVisibilitySettingInput.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignVisibilitySettingInput/PromoCampaignVisibilitySettingInput.module.css
@@ -27,3 +27,8 @@ form.form > div:nth-child(2) {
     flex-basis: 30%;
     margin-top: 35px;
 }
+
+.error {
+    color: tomato;
+    margin-top: 8px;
+}
